@@ -19,6 +19,7 @@ ChangeLog
 
 [-] * Fix some memory leaks found by cppcheck.
 [-] * Fix unsafe sprintf usage in some modules.
+[!] * Separate SMS daemon out of gammu binary.
     
 20081219 - 1.22.1
 
